--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div class="page-header wrapper-inner">
       <h1>Hi, <b><?php echo htmlspecialchars($row['Nick_name']); ?></b>.<br>Welcome to our site!</h1>
-      <p><a href="change-nickname.php" class="btn btn-warning">Change Your Nickname</a></p>
-      <p><a href="reset-password.php" class="btn btn-warning">Reset Your Password</a></p>
-      <p><a href="logout.php" class="btn btn-danger">Sign Out of Your Account</a></p>
+      <p><a href="change-nickname.html" class="btn btn-warning">Oregon state university</a></p>
+      <p><a href="reset-password.html" class="btn btn-warning">Reset Your Password</a></p>
+      <p><a href="logout.html" class="btn btn-danger">Sign Out of Your Account</a></p>
     </div>
   </body>
 </html>
