--- a/404.html
+++ b/404.html
@@ -1,4 +1,6 @@
-<main class="error-page">
-    <h2>404</h2>
-    <h3>Page not found.</h3>
-</main>
+---
+title: 404 error
+layout: error
+---
+
+404 error go back
