--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Welcome</title>
-    <!-- <style type="text/css">
-        body{ font: 14px sans-serif; text-align: center; }
-    </style> -->
-  </head>
-  <body>
-    <div class="page-header wrapper-inner">
-      <h1>Hi, <b><?php echo htmlspecialchars($row['Nick_name']); ?></b>.<br>Welcome to our site!</h1>
-      <p><a href="change-nickname.html" class="btn btn-warning">Oregon state university</a></p>
-      <p><a href="reset-password.html" class="btn btn-warning">Reset Your Password</a></p>
-      <p><a href="logout.html" class="btn btn-danger">Sign Out of Your Account</a></p>
-    </div>
-  </body>
-</html>
+---
+title: Home
+layout: base
+---
+
+<h1>My Latest Blogs</h1>
+
+<div class="blog-post">
+    {% for post in site.posts limit:5 %}
+    <h2><a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a><h2>
+    <h3><i class="fas fa-calendar-alt"></i> {{ post.date | date_to_long_string }}</h3>
+    <p>{{ post.excerpt }} <a href="{{ post.url | absolute_url }}">[...]</a></p>
+    {% endfor -%}
+</div>
