--- a/404.html
+++ b/404.html
@@ -1,6 +1,4 @@
----
-title: 404 error
-layout: error
----
-
-404 error go back
+<main class="error-page">
+    <h2>404</h2>
+    <h3>HTTP Version Not Supported.</h3>
+</main>
