--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
   </head>
   <body data-new-gr-c-s-check-loaded="14.1041.0" data-gr-ext-installed="">
 
-
+    <style>
+        .indent-1 {float: left;}
+        .indent-1 section {width: 50%; float: left;}
+    </style>
+    
     <section id="nav">
       <h1><a href="/">Hongyiel Suh</a></h1>
       <ul>
