--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
 <main class="error-page">
     <h2>404</h2>
-    <h3>HTTP Version Not Supported.</h3>
+    <h3>NOT Modified yet please wait for Modified</h3>
 </main>
