--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kuan-Yen Chou">
+    <meta name="description" content="T">
 
     <link href="/fonts/iosevka.css" rel="stylesheet" type="text/css">
     <link href="/fonts/iosevka-etoile.css" rel="stylesheet" type="text/css">
