insert project list
fix some error, insert project list

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -16,7 +16,7 @@
         Hongyiel Suh
       
     </title>
-    <link rel="canonical" href="https://kychou.net/">
+    <link rel="canonical" href="https://hongyiel.github.io/">
 
 
 
