--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     <p>My research interests include Natural Language Processing, Machine learning, software engineering, 
         and, more generally, improving communication networks' reliability, performance, 
         and correctness, and networked neural systems.</p>
+
+        <p>Currently, I am internship at MediaZen, and I working on a paper that Anemia image classification. I expect the result of the analysis that anemia effect rare diseases. </p>
     
       </div>
 
@@ -68,7 +70,8 @@
         <strong>
           Project: 
         </strong>
-
+        
+        <li>Bio Data analysis, find rare diseases with machine learning classification NN and Transformer </li>
         <li>'Key Word Spotting' analysis with pure Python</li>
         <li>Machine Learning indoor Floor plan (with AutoDesk) </li>
         <li>Mobile application, Movie application</li>
